# ChangeLog for net-firewall/fwbuilder
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.68 2008/06/09 00:48:32 darkside Exp $

  09 Jun 2008; Jeremy Olexa <darkside@gentoo.org> fwbuilder-2.0.12.ebuild:
  Fixed QA issue regarding pre-stripped files. bug #198635.

  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Carlos Silva (r3pek) from metadata.xml (as per #80351). Assigning
  to maintainer-needed.

*fwbuilder-2.1.14 (29 Sep 2007)

  29 Sep 2007; Carlos Silva <r3pek@gentoo.org> +fwbuilder-2.1.14.ebuild:
  Version bump

*fwbuilder-2.1.13-r2 (07 Sep 2007)

  07 Sep 2007; Carlos Silva <r3pek@gentoo.org> -fwbuilder-2.1.13-r1.ebuild,
  +fwbuilder-2.1.13-r2.ebuild:
  rev bump to fix bug #191465. Thx Heiko Helmle for reporting

*fwbuilder-2.1.13-r1 (06 Sep 2007)

  06 Sep 2007; Carlos Silva <r3pek@gentoo.org>
  +files/fwbuilder-2.1.13-build-with-external-antlr.patch,
  -fwbuilder-2.1.13.ebuild, +fwbuilder-2.1.13-r1.ebuild:
  Revision bump to add a patch to make use of an externel antlr. Updated
  ebuild from bug #187545 thx to Davide Pesavento. Also dropped alpha and
  sparc keyword, see bug #187186

*fwbuilder-2.1.13 (25 Jul 2007)

  25 Jul 2007; Carlos Silva <r3pek@gentoo.org> metadata.xml,
  -fwbuilder-2.1.10.ebuild, +fwbuilder-2.1.13.ebuild:
  Version bump. Taking maintainership

  06 May 2007; Marius Mauch <genone@gentoo.org> fwbuilder-2.0.12.ebuild,
  fwbuilder-2.1.10.ebuild:
  Replacing einfo with elog

*fwbuilder-2.1.10 (01 Apr 2007)

  01 Apr 2007; Anant Narayanan <anant@gentoo.org> -fwbuilder-2.1.5.ebuild,
  +fwbuilder-2.1.10.ebuild:
  vBump to 2.1.10, remove 2.1.5. Closes bug #157542

  20 Aug 2006; <sjl@gentoo.org> fwbuilder-2.1.5.ebuild:
  fix executable name in desktop file (Bug #144461)

*fwbuilder-2.1.5 (19 Aug 2006)

  19 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +fwbuilder-2.1.5.ebuild:
  Version bump.
