@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/fwbuilder
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.68 2008/06/09 00:48:32 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.69 2008/06/09 00:55:17 darkside Exp $
+
+  09 Jun 2008; Jeremy Olexa <darkside@gentoo.org>
+  fwbuilder-2.1.13-r2.ebuild, fwbuilder-2.1.14.ebuild:
+  Fix up USE flag check on a dependency, default behavior changed. Thanks to
+  Daniel Kerwin for reporting, bug #215920
 
   09 Jun 2008; Jeremy Olexa <darkside@gentoo.org> fwbuilder-2.0.12.ebuild:
   Fixed QA issue regarding pre-stripped files. bug #198635.
